--- a/UIU/cen_uiu/gui/app.kv
+++ b/UIU/cen_uiu/gui/app.kv
@@ -1,8 +1,9 @@
 #:kivy 1.0.9
 
-<Root>:
-    Label:
-        font_size: 70
-        center_x: root.width / 2
-        top: root.top - 50
-        text: "Chevrolet Matiz"
+<MainScreen>:
+    BoxLayout:
+        Label:
+            font_size: 70
+            center_x: root.width / 2
+            top: root.top - 50
+            text: "Chevrolet Matiz"
