--- a/UIU/cen_uiu/gui/app.kv
+++ b/UIU/cen_uiu/gui/app.kv
@@ -7,3 +7,49 @@
             center_x: root.width / 2
             top: root.top - 50
             text: "Chevrolet Matiz"
+
+<BluetoothScreen>:
+    ScrollView:
+        do_scroll_x: False
+        do_scroll_y: True
+
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint_y: None
+            
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
+            Label:
+                text: "device 1"
