--- a/UIU/cen_uiu/gui/app.kv
+++ b/UIU/cen_uiu/gui/app.kv
@@ -19,37 +19,18 @@
             
             Label:
                 text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
-            Label:
-                text: "device 1"
+
+<UpdateScreen>:
+    canvas.before:
+        Color:
+            rgb: 0.25882352941176473, 0.5294117647058824, 0.9607843137254902
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    BoxLayout:
+        orientation: 'vertical'
+    
+        Label:
+            text: "Updating..."
+            font_size: 70
