--- a/UIU/frontend/src/index.css
+++ b/UIU/frontend/src/index.css
@@ -1,3 +1,7 @@
+* {
+  transition: background-color 1s;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
